# DrFatemiDataStructureClass

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: testing.yml
DSP/: __init__.py
DSP/algorithms/: sortings.py
DSP/datastructures/: doublylinkedlist.py  generallinkedlist.py  linkedlist.py  linkedlists.py  singlylinkedlist.py
dsp/: __init__.py
dsp/datastructures/: bintree.py  linkedlists.py  stacks.py  trees.py
dsp/exercises/: HalghListavi.ipynb  LoopFinder.ipynb  Sargardan.ipynb  binarylinkcheat.py  choice.py  thebiggestcheat.py
dsp/exercises/first/: binarylinkcheat.py
dsp/exercises/second/: ghostcost.py  trianglegenerator.py
dsp/exercises/stacks_queues/: SaftakandEstaf.ipynb  deque.ipynb  forinfor.py  going_round.py  qatar2022.py
dsp/exercises/time_complexity/: ghostcost.py  trianglegenerator.py
dsp/exercises/trees/: balanced.py  height.py  leftleaves.py
dsp/projects/: __init__.py
dsp/projects/todo_list/: tasks.py
experiments/: expr.py
tests/datastructures/: test_circularlylinkedlist.py  test_doublylinkedlist.py  test_linkedlist.py  test_singlylinkedlist.py  test_stacks.py  test_trees.py
tests/exercises/: test_choice.py  test_thebiggestcheat.py
tests/exercises/first/: test_binarylinkcheat.py
tests/exercises/second/: test_ghostcost.py
tests/exercises/stacks_queues/: test_mydeque.py  test_myspecialqueue.py
tests/projects/todo_list/: test.py
