[tool.poetry]
name = "dsp"
version = "0.1.0"
description = "All codes and answers related to data structure class of Dr. Fatemi"
authors = ["Mahdi Haghverdi <mahdihaghverdiliewpl@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.6.1"
mypy = "^0.971"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
